--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,4 @@
-PORT = 3000
-DBCON = mongodb://localhost:27017/findmed
+PORT=3000
+DBCONNECTION=mongodb://localhost:27017/findmed
+JWTSECRET=82i44Ç$$$&jsjsJKS23rkfsdbvksldWEDEVFG
+DOCSPERPAGE=10
