--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@ng-select/ng-select": "^5.0.0",
+    "ng-multiselect-dropdown": "^0.3.8",
     "ng2-dragula": "^2.1.1",
     "nodemailer": "^6.7.5",
     "rxjs": "~6.5.5",
